syntax = "proto3";

package payment_service.v1;

option go_package = "github.com/Doremi203/couply/backend/payment/gen/api/payment-service/v1;payment_service";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "api/common/v1/common.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Приложение для знакомств. Сервис платежей";
    version: "1.0.0";
    description: "Сервис платежей для приложения, которое позволяет людям искать людей для знакомств";
  };
  consumes: "application/json";
  produces: "application/json";
  security_definitions: {
    security: {
      key: "api-token";
      value: {
        in: IN_HEADER;
        type: TYPE_API_KEY;
        name: "x-api-token";
        description: "Токен авторизации";
      }
    }
    security: {
      key: "user-token";
      value: {
        in: IN_HEADER;
        type: TYPE_API_KEY;
        name: "user-token";
        description: "Токен пользователя для идентификации";
      }
    }
  }
};

service PaymentService {
  rpc CreatePaymentV1 (CreatePaymentV1Request) returns (CreatePaymentV1Response) {
    option (google.api.http) = {
      post: "/v1/payments/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Создание платежа";
      description: "Принимает важные поля для создания платежа";
      security: {
        security_requirement: {
          key: "api-token";
          value: {};
        }
        security_requirement: {
          key: "user-token";
          value: {};
        }
      }
    };
  }
}

message CreatePaymentV1Request {
  string subscription_id = 1 [
    (validate.rules).string.min_len = 2,
    (google.api.field_behavior) = REQUIRED
  ];
  int64 amount = 2 [
    (validate.rules).int64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  string currency = 3 [
    (validate.rules).string.min_len = 3,
    (validate.rules).string.max_len = 3,
    (google.api.field_behavior) = REQUIRED
  ];
}

message CreatePaymentV1Response {
  string payment_id = 1;
  PaymentStatus status = 2;
  google.protobuf.Timestamp updated_at = 3;
}

enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_SUCCESS = 2;
  PAYMENT_STATUS_FAILED = 3;
  PAYMENT_STATUS_REFUNDED = 4;
}